@@ -44,6 +44,7 @@ Cheat Sheet for Android Interviews
    
 * <b>LinkedList</b></br>
    * [Reverse a Linked List](/src/linkedlist/ReverseLinkedList.java)
+   * [Remove duplicates from a Linked List](/src/linkedlist/RemoveDuplicates.java)   
    * [Find the Middle Node of a Linked List](/src/linkedlist/FindMiddleNode.java)
    * [Find the Nth Node of a Linked List](/src/linkedlist/FindNthNode.java)
    * [Check if a Linked List is cyclic](/src/linkedlist/CheckIfContainsCycle.java)
@@ -543,6 +544,20 @@ savedInstanceState.Also it won't affect the performance even if there are large 
 * <b>Arraymap/SparseArray vs HashMap in Android?</b></br>
    * [Article 1 on the subject](https://android.jlelse.eu/app-optimization-with-arraymap-sparsearray-in-android-c0b7de22541a)
    * [Article 2 on the subject](https://medium.com/@mohom.r/optimising-android-app-performance-with-arraymap-9296f4a1f9eb) </br>
+   
+   
+* <b>How to reduce build time of an Android app?</b></br>
+   * Check out this awesome [article](https://medium.com/exploring-code/how-to-decrease-your-gradle-build-time-by-65-310b572b0c43) on it. 
+   * What I got from the article: A few commands we can add to the gradle.properties file:
+     * ```org.gradle.configureondemand=true``` - This command will tell gradle to only build the projects that it really needs to build.
+     * Use Daemon - ```org.gradle.daemon=true``` - Daemon keeps the instance of the gradle up and running in the background even after your build finishes. This will remove the time required to initialize the gradle and decrease your build timing significantly.
+     * ```org.gradle.parallel=true``` - Allow gradle to build your project in parallel. If you have multiple modules in you project, then by enabling this, gradle can run build operations for independent modules parallelly.
+     * Increase Heap Size - ```org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8``` - Since android studio 2.0, gradle uses dex in the process to decrease the build timings for the project. Generally, while building the applications, multiple dx processes runs on different VM instances. But starting from the Android Studio 2.0, all these dx processes runs in the single VM and that VM is also shared with the gradle. This decreases the build time significantly as all the dex process runs on the same VM instances. But this requires larger memory to accommodate all the dex processes and gradle. That means you need to increase the heap size required by the gradle daemon. By default, the heap size for the daemon is about 1GB. 
+  * Ensure that dynamic dependency is not used. i.e. do not use 
+  </br>```implementation 'com.android.support:appcompat-v7:27.0.+'```. </br>
+  This command means gradle will go online and check for the latest version every time it builds the app.</br> 
+  Instead use fixed versions i.e. ```'com.android.support:appcompat-v7:27.0.2'```    
+   </br>   
    
    
 * <b>Android Architecture Components?</b></br>
